# sdl2-piglet

./: CMakeLists.txt  main.c
